<resources>
    <!-- General Strings -->
    <string name="app_name">Upopulse</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name ="openDrawer">Ouverture</string>
    <string name ="closeDrawer">Fermeture</string>
    <string name="ok">Ok</string>

    <!-- Strings related to login -->
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Identification</string>
    <string name="image_content_description">Un Android avec un chien</string>
    <string name="create_account">Créer un compte</string>
    <string name="uemail">Adresse email</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se connecter</string>

    <!-- Strings related to create account -->
    <string name="title_activity_create_account">Création de compte</string>
    <string name="uname">Nom</string>
    <string name="ufirstname">Prénom</string>
    <string name="confirm_password">Confirmez votre mot de passe</string>
    <string name="create">Confirmation</string>
    <string name="description">Description</string>
    <string name="telephone">Téléphone</string>
    <!-- Strings related to search -->
    <string name="action_search">Recherche</string>
    <string name="search_hint">ex: Salle 310, 411, ...</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <!-- Strings related to events -->
    <string name="title_activity_display_single_events">Evenement</string>
    <string name="title_activity_display_events">Liste des évènements</string>

    <string name="title_activity_update_account">Mon compte</string>
    <string name="title_activity_admin">Administrateur</string>
    <string name="sms">Envoyer par sms</string>

    <string name="noGeoloc">L\'appareil ne trouve pas votre position</string>
    <string name="noConnexionForItinerary">Une connexion est necessaire pour placer des marqueurs et tracer un itineraire</string>
    <string name="itinerary">Itineraire</string>
    <string name="cancelItinerary">Annuler/Clear</string>
    <string name="itinerayrDialogTitle">Tracer d\'itineraire</string>
    <string name="itineraryDialogGeolocDrawContent">Tracer l\'itineraire depuis votre position ?</string>
    <string name="itineraryDialogDeleteItinerayTraceContent">Effacer l\'itinéraire ?</string>
    <string name="itineraryDialogNoGeoLocDrawContent">Tracer l\'itineraire entre le1s deux marqueurs ?</string>
</resources>
