<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="7dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar">
        </include>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/android_picture"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_padding"
                    android:src="@drawable/android"
                    android:contentDescription="@string/image_content_description" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/normal_padding"
                    android:text="@string/uname"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/black_color" />

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="@dimen/extra_padding"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/normal_padding"
                    android:text="@string/ufirstname"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/black_color" />

                <EditText
                    android:id="@+id/user_firstname"
                    android:layout_width="@dimen/extra_padding"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_gravity="center" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/normal_padding"
                    android:text="@string/uemail"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/black_color" />

                <EditText
                    android:id="@+id/user_email"
                    android:layout_width="@dimen/extra_padding"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/normal_padding"
                    android:text="@string/description"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/black_color" />

                <EditText
                    android:id="@+id/user_description"
                    android:layout_width="@dimen/extra_padding"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/normal_padding"
                    android:text="@string/telephone"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/black_color" />

                <EditText
                    android:id="@+id/user_telephone"
                    android:layout_width="@dimen/extra_padding"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/normal_padding"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/password"
                    android:textColor="@color/black_color" />

                <EditText
                    android:id="@+id/user_password"
                    android:layout_width="@dimen/extra_padding"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/normal_padding"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/confirm_password"
                    android:textColor="@color/black_color" />

                <EditText
                    android:id="@+id/user_password1"
                    android:layout_width="@dimen/extra_padding"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/infopass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/ColorPrimary"
                    android:layout_gravity="center"
                    android:textSize="@dimen/normal_text_size" />

                <Button
                    android:id="@+id/user_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/normal_padding"
                    android:text="@string/create" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"

        android:background="#ffffff"
        android:scrollbars="vertical">

    </android.support.v7.widget.RecyclerView>


</android.support.v4.widget.DrawerLayout>